==> grbl/grbl/arch/mbed_lpc17/stepper.c <==
#include "stepper.h"
#include "config.h"
#include "settings.h"
#include <math.h>
#include <stdlib.h>
#include "nuts_bolts.h"
#include "planner.h"
#include "limits.h"
#include "LPC17xx.h"
#include "gpio.h"
#include "dev_misc.h"
#include "FreeRTOS.h"
#include "task.h"
#include "led.h"
#define STEPPER_X_A1 	(0x01<<9)
#define STEPPER_X_A2 	(0x01<<8)
#define STEPPER_X_B1 	(0x01<<7)
#define STEPPER_X_B2 	(0x01<<6)
#define STEPPER_Y_A1 	(0x01<<0)
#define STEPPER_Y_A2 	(0x01<<1)
#define STEPPER_Y_B1 	(0x01<<18)
#define STEPPER_Y_B2 	(0x01<<17)
#define STEPPER_Z_A1 	(0x01<<15)
#define STEPPER_Z_A2 	(0x01<<16)
#define STEPPER_Z_B1 	(0x01<<23)
#define STEPPER_Z_B2 	(0x01<<24)
#define STEPPER_X_ENABLE (0x01<<25)
#define STEPPER_Y_ENABLE (0x01<<26)
#define STEPPER_ALL_PINS (STEPPER_X_A1|STEPPER_X_A2|STEPPER_X_B1|STEPPER_X_B2|STEPPER_Y_A1|STEPPER_Y_A2|STEPPER_Y_B1|STEPPER_Y_B2|STEPPER_Z_A1|STEPPER_Z_A2|STEPPER_Z_B1|STEPPER_Z_B2|STEPPER_X_ENABLE|STEPPER_Y_ENABLE)
#define STEPPER_PORT 	0
#define DIR_FORWARD	1
#define DIR_BACKWARD	0
#define TICKS_PER_MICROSECOND (F_CPU/1000000)
#define CYCLES_PER_ACCELERATION_TICK ((TICKS_PER_MICROSECOND*1000000)/ACCELERATION_TICKS_PER_SECOND)

void st_init()
{
  	// Start in the idle state
 	st_go_idle();

  // Configure directions of interface pins
  GPIO_SetDirection(STEPPER_PORT, 0, STEPPER_ALL_PINS);
	GPIO_Write(STEPPER_PORT,0, STEPPER_ALL_PINS); //clear all

	const unsigned long TCR_COUNT_RESET = 2;
	const unsigned long TCR_COUNT_ENABLE = 0x01;

	/* Power up and feed the timer. */
	LPC_SC->PCONP |= (1<<2);
	LPC_SC->PCLKSEL0 |= (0x03<<4); // PLCK/8
	
	LPC_TIM1->PR =  8; // the slowest will be MINIMUM_STEPS_PER_MINUTE 

	 //int when mr0 matches , reset after match
	LPC_TIM1->MCR |= ((1<<0)|(1<<1));
	
	set_step_events_per_minute(6000);

	/* Reset Timer 0 */
	LPC_TIM1->TCR = TCR_COUNT_RESET;

	NVIC_EnableIRQ(TIMER1_IRQn); // Enable timer interrupt

	/* Start the counter. */
	LPC_TIM1->TCR = TCR_COUNT_ENABLE;
}

static void set_step_events_per_minute(uint32_t steps_per_minute) 
{
  	if (steps_per_minute < MINIMUM_STEPS_PER_MINUTE) { 
		steps_per_minute = MINIMUM_STEPS_PER_MINUTE; 
	}
	LPC_TIM1->MR0 = (((F_CPU/8)/8)*60)/steps_per_minute;
}
